[project]
name = "sacred-grove-puzzle"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Assis",email = "mateus.d.assis.silva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "networkx (>=3.6.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
